2012-02-16  Krzysztof Kowalik  <chris@nu7hat.ch>

	* pkg/webrocket/context.go: fixed signal sending
	* cmd/webrocket-admin/main.go: fixed signal trap

2012-02-13  Krzysztof Kowalik  <chris@nu7hat.ch>

	* pkg/kosmonaut/worker.go: implemented SUB worker
	* pkg/kosmonaut/worker_test.go: worker tests
	* pkg/kosmonaut/*.go: fixes, tweaks and documentation

2012-02-09  Krzysztof Kowalik  <chris@nu7hat.ch>

	* pkg/webrocket/admin_endpoint.go: done as it should be
	* pkg/webrocket/admin_handler.go: handler part extracted from admin endpoint
	* pkg/webrocket/admin_serve_mux.go: new serve mux for admin endpoint
	* pkg/webrocket/admin_serve_mux_test.go: admin serve mux tests
	* pkg/webrocket/vhost.go: changed DeleteVhost return argument to be an error
	* pkg/webrocket/vhost_test.go: fixed tests
	* pkg/kosmonaut/: kosmonaut client moved here, better tests for it.
	* cmd/webrocket-admin/integration_test.go: added cases for regenerate_vhost_token command
	* cmd/webrocket-admin/main.go: fixed maybeChannel implx
	* README: updates
	* Makefile: added kosmonaut stuff

2012-02-08  Krzysztof Kowalik  <chris@nu7hat.ch>

	* pkg/webrocket/admin_endpoint.go: fixed typo
	* pkg/webrocket/webrocket.go: added ReadCookie func
	* cmd/webrocket-admin/: refactored admin tool

2012-02-07  Krzysztof Kowalik  <chris@nu7hat.ch>

	* webrocket/: moved to pkg/webrocket, gofix
	* webrocket-admin/: moved to cmd/webrocket-admin, gofix
	* webrocket-server/: moved to cmd/webrocket-server, gofix
	* Makefile: adjusted to use go tool
	* docs/Makefile: fixes
	* INSTALL: updated installation steps
	* README: updated information

2012-01-30  Krzysztof Kowalik  <chris@nu7hat.ch>

	* webrocket/backend_endpoint.go: switched from status and code to &Status
	* webrocket/webrocket.go: added Status struct
	* webrocket/websocket_endpoint.go: switched from status and code to &Status
	* webrocket-admin/main.go: fixed cookie loading

2012-01-27  Krzysztof Kowalik  <chris@nu7hat.ch>
